[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=1]
[ext_resource path="res://GFX/CoronaEnemy/virus_1_2.png" type="Texture" id=2]
[ext_resource path="res://GFX/CoronaEnemy/virus_1_3.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 23.1707

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 1 )
knockback = 10

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 1 )
animation = "idle"

[node name="Hitbox" type="Area2D" parent="AnimatedSprite" groups=[
"Enemy",
]]
scale = Vector2( 2.5, 2.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite/Hitbox"]
visible = false
shape = SubResource( 2 )

[node name="Stun_Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
[connection signal="tree_exiting" from="AnimatedSprite" to="." method="_on_AnimatedSprite_tree_exiting"]
[connection signal="area_entered" from="AnimatedSprite/Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="timeout" from="Stun_Timer" to="." method="_on_Stun_Timer_timeout"]
